--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-simple-image-slider": "^2.4.1",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
