--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-simple-image-slider": "^2.4.1",
+    "react-slideshow-image": "^4.0.5",
     "react-timer-hook": "^3.0.5",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
